--- a/src/app/employees/employee/employee.component.html
+++ b/src/app/employees/employee/employee.component.html
@@ -34,8 +34,8 @@
         </div>
         <mat-form-field>
           <mat-select formControlName="department" placeholder="Department">            
-            <ng-container *ngFor="let department of departments">
-                <mat-option value="{{department.id}}">{{department.value}}</mat-option>
+            <ng-container *ngFor="let department of departmentService.departmentArray">
+                <mat-option value="{{department.$key}}">{{department.code}} - {{department.name}}</mat-option>
             </ng-container>
           </mat-select>
         </mat-form-field>
