--- a/src/styles.css
+++ b/src/styles.css
@@ -35,6 +35,12 @@ snack-bar-container.success {
   background-color: #5cb85c;
   color: #fff;
 }
+
+snack-bar-container.warn {
+  background-color: red;
+  color: #fff;
+}
+
 snack-bar-container.notification simple-snack-bar {
   font-size: 18px !important;
   font-weight: bold;
@@ -74,3 +80,11 @@ mat-footer-row mat-footer-cell {
           height: 32px;
           width: 32px;
       }
+
+/* Dialog pop up */
+.btn-dialog-close {
+  width: 45px;
+  min-width: 0px !important;
+  height: 40px;
+  padding: 0px !important;
+}
